[package]
name = "dungeoncrawl"
version = "0.1.0"
authors = ["Dylan Wright"]
edition = "2021"
rust-version = "1.75.0"

[registeries.crates-io]
protocol = "sparse"

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"
serde = { version = "=1.0.196" }
ron = "=0.6.1"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic

[build]
target = "x86_64-unknown-linux-gnu"
# link-arg = "-fuse-ld=lld"